# grimlock

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  index.html
.github/workflows/: cross-compatibility-tests.yml  publish-python.yml  publish-typescript.yml
cross-compatibility-testing/: .gitignore  run-tests.sh
cross-compatibility-testing/go-generator/: go.mod  go.sum  main.go
cross-compatibility-testing/go-verifier/: go.mod  main.go
cross-compatibility-testing/python-generator/: generator.py
cross-compatibility-testing/python-verifier/: verifier.py
cross-compatibility-testing/ts-generator/: generator.test.ts  generator.ts  package.json  pnpm-lock.yaml  vitest.config.ts
cross-compatibility-testing/ts-verifier/: package.json  verifier.test.ts  verifier.ts  vitest.config.ts
go-lang/grimlock/: .gitignore  go.mod  grimlock.go  version_manager.go
go/grimlock/: LICENSE  README.md  doc.go  example_test.go  go.mod  grimlock.go  version_detection.go  version_manager.go
python/grimlock/: .gitignore  README.md  __init__.py  pyproject.toml  version_manager.py
python/grimlock/tests/: __init__.py  test_cross_compat.py  test_v1.py
python/grimlock/types/: __init__.py  common.py  v1.py  version.py
python/grimlock/utils/: __init__.py  encoding.py  memory_security.py  serialization.py
python/grimlock/versions/: __init__.py
python/grimlock/versions/v1/: __init__.py  constants.py  ecdh.py  encryption.py  key_derivation.py  key_generation.py  recovery_key.py
python/grimlock/versions/v2/: __init__.py
typescript/grimlock/: .npmrc  PUBLISHING.md  QUICK_START.md  (+12 more)
(+35 files in other folders)
